setTheme function working

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="buttons">
-        <button>Rainbow</button>
-        <button>Lighter</button>
-        <button>Reset</button>
+        <button class="black">Black</button>
+        <button class="randomColor">Rainbow</button>
+        <button class="grayScale">Lighter</button>
+        <button class="reset">Reset</button>
     </div>
     <div class="sketchpad"></div>
     <script src="main.js" type="text/javascript"></script>
