--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="buttons">
         <button class="black">Black</button>
-        <button class="randomColor">Rainbow</button>
-        <button class="grayScale">Lighter</button>
+        <button class="random-color">Rainbow</button>
+        <button class="gray-scale">Lighter</button>
         <button class="reset">Reset</button>
     </div>
     <div class="sketchpad"></div>
